2018-06-21 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/asxxsrc/asdbg.c:
	  Fix an assembler issue, alternative fix to patch #286.

2018-06-17 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCC.y,
	  src/SDCCBBlock.c,
	  src/SDCCast.c,
	  src/SDCCast.h,
	  src/SDCCdwarf2.c,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/SDCCglobl.h,
	  src/SDCCglue.c,
	  src/SDCCicode.c,
	  src/SDCCicode.h,
	  src/SDCCmem.c,
	  src/SDCCsymt.c,
	  src/SDCCsymt.h,
	  src/SDCCval.c,
	  src/cdbFile.c,
	  support/regression/tests/p99-conformance.c,
	  support/regression/tests/declafterstmt.c,
	  support/valdiag/tests/declafterstmt.c:
	  Support for C99 intermingling of declaration and statements, patch by Benedikt Freisen.
	* doc/sdccman.lyx:
	  Update documentation on standard support.

2018-06-15 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCClospre.hpp,
	  support/regression/tests/bug-2761.c:
	  Fix bug #2761.
	* src/SDCCicode.c:
	  Optimize division from pointer subtraction.
	* src/stm8/gen.c:
	  Improve ^.

2018-06-13 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCglobl.h,
	  src/SDCCBBlock.c:
	  Infrastructure for custom iCode dump point.
	* src/SDCClospre.hpp:
	  Fix handling of use vector in lospre.
	* src/SDCClrange.h,
	  src/SDCClrange.c,
	  src/SDCCopt.c:
	  Fix secondary issue in bug #2756.
	* device/include/uchar.h,
	  device/lib/incl.mk,
	  device/lib/mbstoc16s.c,
	  device/lib/c16stombs.c,
	  support/regression/tests/new_wide.c
	  Functions for converting between UTF-8 and UTF-16 strings.

2018-06-13 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCcse.c: fix bugs #2709 and #1951
	* support/regression/tests/gcc-torture-execute-20001027-1.c,
	* support/regression/tests/bug-2708.c: enable tests

2018-06-13 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/regression/tests/bug-2756.c:
	  disabled for test-mcs51-large and test-mcs51-huge due to build failure.
